# json-diff

./: .gitignore  README.md  main.py  pyproject.toml
src/json_diff/: __init__.py  main.py
src/json_diff/ui/: main_window.py
src/json_diff/ui/forms/: main_window.ui
src/json_diff_app/: __init__.py  main.py
src/json_diff_app/core/: __init__.py  diff_engine.py
src/json_diff_app/ui/: __init__.py  main_window.py
tests/: test_diff_engine.py
